--- a/Server/templates/index.html
+++ b/Server/templates/index.html
@@ -48,6 +48,7 @@
       <li><strong>Headers: </strong>URL args (filename)</li>
       <li><strong>Returns: </strong>Image file specified by <em>filename</em> in <em>/enhanced</em></li>
       <li><strong>Example: </strong>/getProcessedPhoto?filename=0_processed.png</li>
+      <li><strong>Notes: </strong>File names will always be [name]_original.png, [name]_processed.png, [name]_before_after.png</li>
     </ul>
   </p>
 </body>
